# ttoy-mlir

./: .gitignore  CMakeLists.txt  LICENSE  README.md  compile_commands.json  find_sym.sh
examples/: 00-basic.mlir  00-basic.ttoy  01-pattern_matches.mlir  01-pattern_matches.ttoy  02-CSE.mlir  02-CSE.ttoy  03-inline.mlir  03-inline.ttoy  04-shape_infer.mlir  04-shape_infer.ttoy  05-lower2affine.mlir  06-lower2LLVM.mlir  07-lower2LLVMIR.ll  07-lower2LLVMIR.ttoy  08-builexe  09-scan.ttoy  09-variable_shadowing.ttoy  10-multiplication.ttoy  exp.ttoy
include/: CMakeLists.txt
include/etoy/: CMakeLists.txt  Dialect.hpp  Dialect.td  IRGen.hpp  Ops.td
include/parser/: AST.h  Lexer.h  Parser.h
include/pass/: CMakeLists.txt  Passes.hpp  PatternMatch.td  ShapeInferenceOpInterface.hpp  ShapeInferenceOpInterface.td
include/ttoy/: CMakeLists.txt  Dialect.hpp  Dialect.td  IRGen.hpp  Ops.td
src/: CMakeLists.txt  etoyc.cpp  main.cpp  ttoyc.cpp
src/etoy/: CMakeLists.txt  Dialect.cpp  IRGen.cpp
src/parser/: AST.cpp  CMakeLists.txt
src/pass/: CMakeLists.txt  LowerToAffine.cpp  LowerToLLVM.cpp  PatternMatch.cpp  ShapeInferencePass.cpp
src/ttoy/: CMakeLists.txt  Dialect.cpp  IRGen.cpp
